--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Prestige Golden Grove | Luxury Apartments in Tellapur, Hyderabad</title>
 
+<!-- Favicon Links -->
+<link rel="icon" type="image/x-icon" href="images/logo.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/logo.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/logo.png">
+<link rel="apple-touch-icon" sizes="180x180" href="images/logo.png">
+
+<!-- For newer browsers -->
+<link rel="icon" type="image/png" sizes="192x192" href="images/logo.png">
+<link rel="icon" type="image/png" sizes="512x512" href="images/logo.png">
+
+<!-- For Windows Metro -->
+<meta name="msapplication-TileColor" content="#0c2461">
+<meta name="msapplication-TileImage" content="images/logo.png">
+  
+
+<!-- Theme Color for Mobile Browsers -->
+<meta name="theme-color" content="#0c2461">
+
+<style>
+/* All your existing CSS styles here */<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Prestige Golden Grove | Luxury Apartments in Tellapur, Hyderabad</title>
+
 <style>
 /* RESET & BASE */
 * {
@@ -1922,3 +1948,4 @@ setTimeout(() => {
 </script>
 </body>
 </html>
+
